Parse correctly the vector/list output of Octave backend to variable management widget

BUG: 363553